gcc/testsuite/gfortran.dg/class_2.f03
@@ -1,4 +1,5 @@
 ! { dg-do compile }
+! { dg-options "-std=f2003" }
 !
 ! PR 40940: CLASS statement
 !
